removed an extra comma, which makes json impossible to read

--- a/tasks.sample.json
+++ b/tasks.sample.json
@@ -23,7 +23,7 @@
         "lunch": {
             "summary": "Lunch",
             "colorId": 3,
-            "description": "Nothing like a healthy meal to rejuvenate your body and soul :)",
+            "description": "Nothing like a healthy meal to rejuvenate your body and soul :)"
         }
     }
 }
