--- a/settings.sample.json
+++ b/settings.sample.json
@@ -43,5 +43,41 @@
         "calendar": "worklog",
         "client_id": "client_id",
         "client_secret": "client_secret"
-    }
+    },
+    "default": [
+        {
+            "summary": "Morning activity",
+            "description": "morning work",
+            "start": {
+                "dateTime": "2000-01-01T08:45:00+02:00",
+                "timeZone": "Europe/Stockholm"
+            },
+            "end": {
+                "dateTime": "2000-01-01T12:00:00+02:00",
+                "timeZone": "Europe/Stockholm"
+            },
+            "extendedProperties": {
+                "private": {
+                    "project": "Project Odoo Code"
+                }
+            }
+        },
+        {
+            "summary": "Aftrenoon activity",
+            "description": "afternoon work",
+            "start": {
+                "dateTime": "2000-01-01T12:30:00+02:00",
+                "timeZone": "Europe/Stockholm"
+            },
+            "end": {
+                "dateTime": "2000-01-01T17:15:00+02:00",
+                "timeZone": "Europe/Stockholm"
+            },
+            "extendedProperties": {
+                "private": {
+                    "project": "Project Odoo Code"
+                }
+            }
+        }
+    ]
 }
